--- a/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
+++ b/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
@@ -4,10 +4,18 @@
     &lt;h1&gt;Muokkaa hanketta&lt;/h1&gt;
     &lt;div class=&quot;hanke-img-container&quot;&gt;
       &lt;img src=&quot;../../images/fpo_16x9.png&quot; alt=&quot;Taustakuva&quot; class=&quot;hanke-bg&quot; /&gt;
-      &lt;input class=&quot;btn edit-bg&quot; type=&quot;submit&quot; value=&quot;Vaihda taustakuva&quot; /&gt;
+      &lt;div class=&quot;edit-bg icon-container&quot;&gt;
+        &lt;span&gt;
+          &lt;input type=&quot;submit&quot; value=&quot;Vaihda taustakuva&quot; /&gt;
+        &lt;/span&gt;
+      &lt;/div&gt;
       &lt;div class=&quot;logo-container&quot;&gt;
         &lt;img src=&quot;../../images/fpo_avatar.png&quot; alt=&quot;Logo&quot; class=&quot;hanke-logo&quot; /&gt;
-        &lt;input class=&quot;btn edit-logo&quot; type=&quot;submit&quot; value=&quot;Vaihda logo&quot; /&gt;
+        &lt;div class=&quot;edit-logo icon-container&quot;&gt;
+          &lt;span&gt;
+            &lt;input type=&quot;submit&quot; value=&quot;Vaihda logo&quot; /&gt;
+          &lt;/span&gt;
+        &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class=&quot;form-element text-el hanke-title&quot;&gt;
@@ -186,17 +194,17 @@
           &lt;span&gt;
             Olen tutustunut &lt;a href=&quot;#&quot;&gt;palvelun s&Atilde;&curren;&Atilde;&curren;nt&Atilde;&para;ihin&lt;/a&gt; ja vakuutan annettujen tietojen olevan todenmukaisia*
           &lt;/span&gt;
-          &lt;ul class=&quot;btn-group&quot;&gt;
+          &lt;ul id=&quot;rblAcceptTerms&quot; class=&quot;btn-group&quot;&gt;
             &lt;li&gt;
-              &lt;input id=&quot;rbl0&quot; type=&quot;radio&quot; name=&quot;group1&quot; value=&quot;0&quot; checked /&gt;
-              &lt;label for=&quot;rbl0&quot;&gt;En hyv&Atilde;&curren;ksy ehtoja&lt;/label&gt;
+              &lt;input id=&quot;rblIDontAcceptTerms&quot; type=&quot;radio&quot; name=&quot;group2&quot; value=&quot;0&quot; checked=&quot;&quot; /&gt;
+              &lt;label for=&quot;rblIDontAcceptTerms&quot;&gt;En hyv&Atilde;&curren;ksy ehtoja&lt;/label&gt;
             &lt;/li&gt;
             &lt;li&gt;
-              &lt;input id=&quot;rbl1&quot; type=&quot;radio&quot; name=&quot;group1&quot; value=&quot;1&quot; /&gt;
-              &lt;label for=&quot;rbl1&quot;&gt;Hyv&Atilde;&curren;ksyn ehdot&lt;/label&gt;
+              &lt;input id=&quot;rblTermsAccepted&quot; type=&quot;radio&quot; name=&quot;group2&quot; value=&quot;1&quot; /&gt;
+              &lt;label for=&quot;rblTermsAccepted&quot;&gt;Hyv&Atilde;&curren;ksyn ehdot&lt;/label&gt;
             &lt;/li&gt;
           &lt;/ul&gt;
-          &lt;input type=&quot;submit&quot; class=&quot;btn btn-otk&quot; value=&quot;Tallenna muutokset&quot; /&gt;
+          &lt;input id=&quot;btnSaveHanke&quot; type=&quot;submit&quot; class=&quot;btn&quot; value=&quot;Tallenna muutokset&quot; disabled=&quot;&quot; /&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
