--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -139,11 +139,13 @@
     <div class="g">
       <div class="g-2up">
         <div class="gi">
-          <div class="content-item large fadeout">
-            <img id="chartHankeGantt" src="../../images/fpo_square.png" alt="Gantt-kuva" />
-            <p class="read-more">
-              <a href="">Lue lisää</a>
-            </p>
+          <div class="content-item large">
+            <div class="fadeout">
+              <img id="chartHankeGantt" src="../../images/fpo_square.png" alt="Gantt-kuva" />
+              <p class="read-more">
+                <a href="">Lue lisää</a>
+              </p>
+            </div>
           </div>
           <div class="content-item large participator-list">
             <div class="helper-container">
