--- a/source/css/scss/objects/_text.scss
+++ b/source/css/scss/objects/_text.scss
@@ -74,7 +74,7 @@ $fadeout-space: 70px;
 		padding-bottom: 10px;
 	}
 
-	.read-more{
+	.read-more{		
 		position: absolute;
 		bottom: 0;
 		margin-bottom: 0;
@@ -96,11 +96,19 @@ $fadeout-space: 70px;
 			right: 0;
 			color: $blue;
 			text-decoration: none;
+			padding-left: 1em;
 
 			&.pt-fix{
 				top: 0;
 			}
-		}
+			&:before {
+				@extend .om-small_arrow_down;
+				font-size: 24px;
+				position: absolute;
+				left: 0;
+				top: -2px;
+			}
+		}		
 	}
 }
 
