--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="{{ htmlClass }}">
+<html class="no-js">
 	<head>
 		<title>{{ title }}</title>
 		<meta charset="UTF-8">
